--- a/.github/ISSUE_TEMPLATE/crt-onboarding.yml
+++ b/.github/ISSUE_TEMPLATE/crt-onboarding.yml
@@ -1,7 +1,12 @@
-# Team Name: team-rel-eng-test
 name: CRT Onboarding
 description: Submit an onboarding request
 body:
+  - type: markdown
+    attributes:
+      value: |
+        # CRT Onboarding Request
+        Please fill out the following information to request onboarding for a new repository. As part of this effort, we will need to 
+        give Team Name: team-rel-eng-test write access to the repository. 
   - type: input
     id: "repository_name"
     attributes:
