--- a/.github/workflows/add-team-on-issue.yml
+++ b/.github/workflows/add-team-on-issue.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           ISSUE_BODY=$(jq -r .issue.body $GITHUB_EVENT_PATH)
           echo "Issue Body: $ISSUE_BODY"
-          echo "team_name=$(echo $ISSUE_BODY | grep -oP '(?<=Team Name: ).*')" >> $GITHUB_ENV
+          echo "team_name=$(echo $ISSUE_BODY | grep -oP '(?<=Team Name:\s*).+')" >> $GITHUB_ENV
 
       - name: Debug team name
         run: |
