--- a/.github/ISSUE_TEMPLATE/crt-onboarding.yml
+++ b/.github/ISSUE_TEMPLATE/crt-onboarding.yml
@@ -4,8 +4,8 @@ body:
   - type: markdown
     attributes:
       value: |
-        # CRT Onboarding Request
-        Please fill out the following information to request onboarding for a new repository. As part of this effort, we will need to give Team Name: team-rel-eng-test write access to the repository. 
+        ## Team Name
+          team-rel-eng-test
   - type: input
     id: "team_name"
     attributes:
